objects/amc__Skill_Assignment__c.object
<CustomObject>
    <description>Used to assign a Skill to a Role.</description>
    <fields>
        <fullName>amc__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Hourly_Rate__c</fullName>
        <description>Identifies the rate the role will be billed out to the client at for performing this skill/service</description>
        <inlineHelpText>Identifies the rate the role will be billed out to the client at for performing this skill/service</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <description>Identifies the rate the role will be paid for performing this skill/service</description>
        <inlineHelpText>Identifies the rate the role will be paid for performing this skill/service</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Proficiency__c</fullName>
        <description>Describes the proficiency of the Role and a particular Skill</description>
        <label>Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Skill Assignments</relationshipLabel>
        <relationshipName>Skill_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>amc__Skill__c</referenceTo>
        <relationshipLabel>Skill Assignments</relationshipLabel>
        <relationshipName>Skill_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Skill Assignment</label>
    <nameField>
        <displayFormat>SA{0}</displayFormat>
        <label>Skill Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>